<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scout100</string>
    <string name="hello_world">Hello Team 100!</string>
    <string name="action_settings">Settings</string>
    <string name="options_01">Orange</string>
    <string name="options_02">Blue</string>
    <string name="options_03">Pink</string>
    <string name="refresh_devices">Send</string>
    <string name="radio_color_pink">Pink</string>
    <string name="radio_color_blue">Blue</string>
    <string name="radio_color_orange">Orange</string>
    <string name="send_log">No Devices...</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="discover_devices">Discover Devices</string>
    <string name="scout_heading">Scout</string>
    <string name="match_num">Match Number</string>
    <string name="start_scouting">Start Scouting!</string>
    <string name="developed_by">Developed By</string>
    <string name="start_screen_heading">Team 100 Scouting</string>
    <string name="team_profiles_button">Team Profiles</string>
    <string name="start_scout_button">Start Scouting!</string>
    <string name="help">Help</string>
    <string name="start_screen">Start Screen</string>
    <string name="scout">Scout</string>
    <string name="scouting">Scouting</string>

</resources>
