<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffff4a01"
    tools:context="org.team100.scout100.Scout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scout_heading"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000"
        android:id="@+id/textView4"
        android:textSize="@dimen/start_screen_heading"
        />
    <EditText
        android:id="@+id/newTextBox"
        android:textColor="#000000"
        android:textSize="15pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/match_num"
        android:layout_marginTop="40pt"
        android:layout_centerHorizontal="true"
        android:color="#000000"
        android:editable="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scouting"
        android:textColor="#ff4a01"
        android:background="#000000"
        android:textSize="20pt"
        android:padding="5pt"
        android:onClick="SaveData"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#000000"
        android:textSize="@dimen/developed_by"
        android:id="@+id/textView3" />

</RelativeLayout>
