<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffff4a01"
    tools:context="org.team100.scout100.startScreen"
    android:id="@+id/start_screen">

    <TextView android:id="@+id/start_screen_heading"
        android:text="@string/start_screen_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/start_screen_heading"
        android:textColor="#000000"
        />
    <Button android:text="@string/team_profiles_button"
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/start_screen_heading"
        android:textColor="#ff4a01"
        android:padding="@dimen/team_profiles_button_padding"
        android:id="@+id/button4"
        android:layout_below="@+id/start_screen_heading"
        android:layout_centerHorizontal="true"
        android:clickable="true"
       />
    <Button android:text="@string/start_scout_button"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/start_screen_heading"
        android:padding="@dimen/team_profiles_button_padding"
        android:textColor="#ffff4a01"
        android:id="@+id/button3"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:onClick="GoToScout" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#000000"
        android:textSize="@dimen/developed_by"
        android:id="@+id/textView3" />
</RelativeLayout>
